<resources>
    <string name="app_name">Sound Bytes</string>

    <!-- Strings related to Splash page -->
    <string name="splash_image_description">The Sound Bytes Logo.</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Sound Bytes</string>
    <string name="title_activity_new">New Post</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to login page -->
    <string name="login_title">Login or Signup</string>
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="username_entry">Username</string>
    <string name="password_entry">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_title">Signup</string>
    <string name="password_entry_verify">Verify Password</string>
    <string name="email_text">Email:</string>
    <string name="email_entry">Email</string>
    <string name="signup_button_text">Signup</string>
    <string name="signup_verify">Please verify your signup by clicking the link sent to your email.</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="error_default">Error</string>
    <string name="error_connection">Error: you may not have a strong internet connection.</string>
    <string name="error_password_match">Error: the passwords do not match.</string>
    <string name="error_unknown">Unknown error has occurred. Possibly connection.</string>

    <!-- Strings related to feed page -->
    <string name="error_feed_update">Unable to update feed.</string>
    <string name="post_title">Post Title</string>
    <string name="post_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eleifend lorem felis, a consectetur dui ullamcorper nec. Cras sagittis vitae nibh et dapibus. Praesent lorem eros, maximus nec leo tempus, egestas dictum felis. Nulla vehicula.</string>
    <string name="logout_button_text">Logout</string>

    <!-- URLS -->
    <string name="url_dev_base">https://nj0okdeivk.execute-api.us-west-2.amazonaws.com/dev/</string>
    <string name="url_prod_base">https://faidg1ey0l.execute-api.us-west-2.amazonaws.com/prod/</string>
    <string name="url_auth">https://nj0okdeivk.execute-api.us-west-2.amazonaws.com/dev/auth</string>
    <string name="url_create_account">https://nj0okdeivk.execute-api.us-west-2.amazonaws.com/dev/create-account</string>
    <string name="url_get_bites">https://faidg1ey0l.execute-api.us-west-2.amazonaws.com/prod/get-bites</string>

</resources>
