<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:ignore="autoFill">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/username_text"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/password_text"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEntry" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_activity_login"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/password_entry"
        android:inputType="textPassword"
        android:nextFocusUp="@id/usernameEntry"
        android:nextFocusDown="@id/loginButton"
        android:text="test123"
        app:layout_constraintBottom_toBottomOf="@+id/passwordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordTextView"
        app:layout_constraintTop_toTopOf="@+id/passwordTextView" />

    <EditText
        android:id="@+id/usernameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/username_entry"
        android:inputType="text"
        android:nextFocusUp="@id/usernameEntry"
        android:nextFocusDown="@id/passwordEntry"
        android:text="ph_314"
        app:layout_constraintBottom_toBottomOf="@+id/usernameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usernameTextView"
        app:layout_constraintTop_toTopOf="@+id/usernameTextView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="onLoginButtonPressed"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEntry" />

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/signup_title"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/usernameTextViewSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/username_text"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTitle" />

    <TextView
        android:id="@+id/passwordTextViewSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/password_text"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEntrySignup" />

    <EditText
        android:id="@+id/usernameEntrySignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/username_entry"
        android:inputType="text"
        android:nextFocusUp="@id/usernameEntrySignup"
        android:nextFocusDown="@id/passwordEntrySignup"
        android:text="ph_314"
        app:layout_constraintBottom_toBottomOf="@+id/usernameTextViewSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usernameTextViewSignup"
        app:layout_constraintTop_toTopOf="@+id/usernameTextViewSignup" />

    <EditText
        android:id="@+id/passwordEntrySignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/password_entry"
        android:inputType="textPassword"
        android:nextFocusUp="@id/usernameEntrySignup"
        android:nextFocusDown="@id/passwordEntryVerifySignup"
        android:text="test123"
        app:layout_constraintBottom_toBottomOf="@+id/passwordTextViewSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordTextViewSignup"
        app:layout_constraintTop_toTopOf="@+id/passwordTextViewSignup" />

    <EditText
        android:id="@+id/passwordEntryVerifySignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_entry_verify"
        android:inputType="textPassword"
        android:nextFocusUp="@id/passwordEntrySignup"
        android:nextFocusDown="@id/emailEntrySignup"
        android:text="test123"
        app:layout_constraintEnd_toEndOf="@+id/passwordEntrySignup"
        app:layout_constraintStart_toStartOf="@+id/passwordEntrySignup"
        app:layout_constraintTop_toBottomOf="@+id/passwordEntrySignup" />

    <EditText
        android:id="@+id/emailEntrySignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email_entry"
        android:inputType="textEmailAddress"
        android:nextFocusUp="@id/passwordEntryVerifySignup"
        android:nextFocusDown="@id/signupButton"
        android:text="preston@hagerfamily.com"
        app:layout_constraintBottom_toBottomOf="@+id/emailTextView"
        app:layout_constraintEnd_toEndOf="@+id/passwordEntryVerifySignup"
        app:layout_constraintStart_toStartOf="@+id/passwordEntryVerifySignup"
        app:layout_constraintTop_toTopOf="@+id/emailTextView" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/email_text"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintEnd_toStartOf="@+id/emailEntrySignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEntryVerifySignup" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onSignupButtonPressed"
        android:text="@string/signup_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEntrySignup" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/error_default"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="?attr/colorError"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />

</android.support.constraint.ConstraintLayout>